--- a/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
+++ b/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
@@ -40,6 +40,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Coordinador de Programa")}                
                 <p:panel styleClass="paneltrabajo" >
                     
                     <div class="tituloContenido">                        
