--- a/web/coordinador/diligenciar-formato-D.xhtml
+++ b/web/coordinador/diligenciar-formato-D.xhtml
@@ -28,6 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Coordinador de Programa")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Presentación del Anteproyecto a la Secretaria de la Facultad"/> <br/>
