--- a/web/director/diligenciar-formato-H.xhtml
+++ b/web/director/diligenciar-formato-H.xhtml
@@ -27,7 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Director")}
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="FORMATO H: Constancia del Director del Trabajo y Jurados de que el material entregado corresponde a la versión sustentada"/> <br/>
