--- a/web/director/editar-formato-F.xhtml
+++ b/web/director/editar-formato-F.xhtml
@@ -38,8 +38,8 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Director")}
                 <p:panel styleClass="paneltrabajo" >
 
                     <div class="tituloContenido">                        
