--- a/web/director/fase-1.xhtml
+++ b/web/director/fase-1.xhtml
@@ -26,9 +26,8 @@
             </ui:define>
 
             <ui:define name="body">          
-
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Director")}
                 <h:form id="fases">
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
