--- a/web/director/fase-3.xhtml
+++ b/web/director/fase-3.xhtml
@@ -27,9 +27,8 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Director")}
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
