--- a/web/estudiante/editar-anteproyecto.xhtml
+++ b/web/estudiante/editar-anteproyecto.xhtml
@@ -40,7 +40,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                
+                #{validarPerfiles.validarPerfil("Estudiante")}
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Editar Anteproyecto"/> <br/>
