--- a/web/estudiante/fase-1.xhtml
+++ b/web/estudiante/fase-1.xhtml
@@ -33,7 +33,7 @@
                     #{trabajodegradoController.incializar()}                
                     #{estudianteViewController.loadTrabajoDeGrado()}
                     #{menuController.setOutPerfiles(true)}
-
+                    #{validarPerfiles.validarPerfil("Estudiante")}
                     <h:form id="fases">                                                           
                         <p:panel >
                             <div class="tituloContenido">                        
