--- a/web/estudiante/fase-4.xhtml
+++ b/web/estudiante/fase-4.xhtml
@@ -25,14 +25,13 @@
             <ui:define name="title">                
             </ui:define>
 
-            <ui:define name="body">
-                
+            <ui:define name="body">                
                 #{estudianteViewController.nombresApellidos(serviciosSimcaController.nombreUsuario)}
                 #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
                 #{trabajodegradoController.incializar()}                
                 #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
-                    
+                #{validarPerfiles.validarPerfil("Estudiante")}                    
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         #{trabajodegradoController.trabajo.trabajonombre}
