--- a/web/estudiante/fase-5.xhtml
+++ b/web/estudiante/fase-5.xhtml
@@ -32,7 +32,7 @@
                 #{trabajodegradoController.incializar()}                
                 #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
-                    
+                #{validarPerfiles.validarPerfil("Estudiante")}                    
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         #{trabajodegradoController.trabajo.trabajonombre}
