--- a/web/jefe-de-departamento/diligenciar-formato-G.xhtml
+++ b/web/jefe-de-departamento/diligenciar-formato-G.xhtml
@@ -28,6 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jefe de Departamento")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Formato G: Remisión del Trabajo Final a la Secretaria de la Facultad por el Jefe de Departamento"/> <br/>
