--- a/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
+++ b/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
@@ -28,6 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jefe de Departamento")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Formato: Revisión de la idea"/> <br/>
