--- a/web/jefe-de-departamento/fase-2.xhtml
+++ b/web/jefe-de-departamento/fase-2.xhtml
@@ -28,6 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jefe de Departamento")}                
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
