--- a/web/jefe-de-departamento/fase-6.xhtml
+++ b/web/jefe-de-departamento/fase-6.xhtml
@@ -26,6 +26,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jefe de Departamento")}                
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
