--- a/web/jurado/diligenciar-acta-sustentacion.xhtml
+++ b/web/jurado/diligenciar-acta-sustentacion.xhtml
@@ -31,7 +31,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Jurado")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Diligenciar Acta de Sustentación"/> <br/>
