--- a/web/jurado/fase-1.xhtml
+++ b/web/jurado/fase-1.xhtml
@@ -25,8 +25,8 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jurado")}                
                 <h:form id="fases">                                                                               
                     <p:panel styleClass="paneltrabajo" >
                         
