--- a/web/jurado/fase-2.xhtml
+++ b/web/jurado/fase-2.xhtml
@@ -24,8 +24,8 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jurado")}                
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         
