--- a/web/jurado/fase-3.xhtml
+++ b/web/jurado/fase-3.xhtml
@@ -26,7 +26,7 @@
             
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                
+                #{validarPerfiles.validarPerfil("Jurado")}                                
                 <h:form id="fases">
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
