--- a/web/perfiles/vista-evaluador.xhtml
+++ b/web/perfiles/vista-evaluador.xhtml
@@ -24,6 +24,7 @@
             </ui:define>
 
             <ui:define name="body">                
+                #{validarPerfiles.validarPerfil("Evaluador")}                
                     <h:form>                    
                         <p:panel styleClass="paneltrabajo" >
                             <h:panelGrid style="margin: 0 auto;">
