--- a/web/perfiles/vista-jefe-de-departamento.xhtml
+++ b/web/perfiles/vista-jefe-de-departamento.xhtml
@@ -24,7 +24,7 @@
             </ui:define>
 
             <ui:define name="body">
-                
+                #{validarPerfiles.validarPerfil("Jefe de Departamento")}                
                 <h:form id="form1">                    
                     <p:panel styleClass="paneltrabajo" >
                         <h:panelGrid style="margin: 0 auto;">
