--- a/web/perfiles/vista-jurado.xhtml
+++ b/web/perfiles/vista-jurado.xhtml
@@ -25,6 +25,7 @@
             </ui:define>
 
             <ui:define name="body">
+                #{validarPerfiles.validarPerfil("Jurado")}                
                 <h:form id="form">
                     <p:growl id="growl" showDetail="true" life="5000"/>
                     <p:panel styleClass="paneltrabajo" >
