--- a/web/perfiles/vista-secretaria-general.xhtml
+++ b/web/perfiles/vista-secretaria-general.xhtml
@@ -24,7 +24,7 @@
             </ui:define>
 
             <ui:define name="body">
-                
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <h:form>                    
                     <p:panel styleClass="paneltrabajo" >
                         
