--- a/web/secretaria/editar-asignacion-jurados.xhtml
+++ b/web/secretaria/editar-asignacion-jurados.xhtml
@@ -28,7 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Editar oficio de asignación de jurados"/> <br/>
