--- a/web/secretaria/fase-1.xhtml
+++ b/web/secretaria/fase-1.xhtml
@@ -27,8 +27,8 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <h:form id="fases">                                                                               
                     <p:panel styleClass="paneltrabajo" >
                         
