--- a/web/coordinador/fase-1.xhtml
+++ b/web/coordinador/fase-1.xhtml
@@ -29,7 +29,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Coordinador de Programa")}                
                 <h:form id="fases">                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
