--- a/web/coordinador/fase-2.xhtml
+++ b/web/coordinador/fase-2.xhtml
@@ -28,7 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                
+                #{validarPerfiles.validarPerfil("Coordinador de Programa")}                
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
