--- a/web/director/editar-anteproyecto.xhtml
+++ b/web/director/editar-anteproyecto.xhtml
@@ -26,6 +26,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Director")}
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Editar Anteproyecto"/> <br/>
