--- a/web/director/fase-4.xhtml
+++ b/web/director/fase-4.xhtml
@@ -27,6 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Director")}
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         #{trabajodegradoController.trabajo.trabajonombre}
