--- a/web/director/fase-6.xhtml
+++ b/web/director/fase-6.xhtml
@@ -27,6 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Director")}
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
