--- a/web/estudiante/fase-3.xhtml
+++ b/web/estudiante/fase-3.xhtml
@@ -26,14 +26,13 @@
             <ui:define name="title">                                
             </ui:define>
 
-            <ui:define name="body">
-                
+            <ui:define name="body">                
                 #{estudianteViewController.nombresApellidos(serviciosSimcaController.nombreUsuario)}
                 #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
                 #{trabajodegradoController.incializar()}                
                 #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
-                
+                #{validarPerfiles.validarPerfil("Estudiante")}
                 <h:form>                                                                         
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
