--- a/web/estudiante/fase-6.xhtml
+++ b/web/estudiante/fase-6.xhtml
@@ -30,6 +30,7 @@
                 #{trabajodegradoController.incializar()}                
                 #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Estudiante")}
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
