--- a/web/evaluador/fase-1.xhtml
+++ b/web/evaluador/fase-1.xhtml
@@ -28,7 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Evaluador")} 
                 <h:form id="fases">                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
