--- a/web/evaluador/fase-2.xhtml
+++ b/web/evaluador/fase-2.xhtml
@@ -27,6 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Evaluador")} 
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
