--- a/web/jurado/fase-5.xhtml
+++ b/web/jurado/fase-5.xhtml
@@ -25,6 +25,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Jurado")}                
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
