--- a/web/perfiles/vista-coordinador-de-programa.xhtml
+++ b/web/perfiles/vista-coordinador-de-programa.xhtml
@@ -24,7 +24,7 @@
             </ui:define>
 
             <ui:define name="body">
-                
+                #{validarPerfiles.validarPerfil("Coordinador de Programa")}                
                 <h:form id="form">
                     <p:panel styleClass="paneltrabajo" >
                         <h:panelGrid style="margin: 0 auto;">
