--- a/web/secretaria/diligenciar-acta-resolucion.xhtml
+++ b/web/secretaria/diligenciar-acta-resolucion.xhtml
@@ -28,7 +28,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Asignación de Acta"/> <br/>
