--- a/web/secretaria/fase-2.xhtml
+++ b/web/secretaria/fase-2.xhtml
@@ -25,9 +25,9 @@
             <ui:define name="title">
             </ui:define>
 
-            <ui:define name="body">
-                
+            <ui:define name="body">                
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         
