--- a/web/secretaria/fase-5.xhtml
+++ b/web/secretaria/fase-5.xhtml
@@ -27,6 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
+                #{validarPerfiles.validarPerfil("Secretaria General")}                
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
