--- a/web/vistas-documentos/ver-formato-H.xhtml
+++ b/web/vistas-documentos/ver-formato-H.xhtml
@@ -90,18 +90,8 @@
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
-                                    <p:outputLabel value="Estado director (#{formatoH.directornomsapes}):" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoH.estadoDirector}"/>
-                                </h:panelGrid>
-                                <br />
-                                <h:panelGrid columns="2">
-                                    <p:outputLabel value="Estado Jurado 1 (#{formatoH.jurado1nomsapes}):" styleClass="subtitulosFormato" />
+                                    <p:outputLabel value="Estado:" styleClass="subtitulosFormato" />
                                     <p:outputLabel value="#{formatoH.estadoJurado1}"/>
-                                </h:panelGrid>
-                                <br />
-                                <h:panelGrid columns="2">
-                                    <p:outputLabel value="Estado Jurado 2 (#{formatoH.jurado2nomsapes}):" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoH.estadoJurado2}"/>
                                 </h:panelGrid>
                                 <br />                                
                             </h:panelGrid>
