--- a/web/perfiles/vista-proceso.xhtml
+++ b/web/perfiles/vista-proceso.xhtml
@@ -35,7 +35,7 @@
 
                         <p:contentFlow var="image" value="#{procedimientoView.images}" style="background-color: #0F2E4C; margin-top: 20px;">
                                 <p:graphicImage value="../resources/img/#{image.name}" styleClass="content" />
-                                <div class="caption" style="color: #D20005;">#{image.title}</div>
+                                <div class="caption" style="color: #FFFFFF;">#{image.title}</div>
                             </p:contentFlow>
 
                     </h:form>
