--- a/web/jurado/diligenciar-acta-sustentacion.xhtml
+++ b/web/jurado/diligenciar-acta-sustentacion.xhtml
@@ -48,7 +48,7 @@
                                         <p:outputLabel styleClass="subtitulosFormato" value="Los jurados del trabajo de grado titulado:" />
                                         <p:outputLabel value="#{actaSustentacionController.nombreTrabajodeGrado}" />
 
-                                        <p:outputLabel styleClass="subtitulosFormato" value="Hacen constar que se realizó la sustentación del trabajo de grado en la fehca y hora: *" />
+                                        <p:outputLabel styleClass="subtitulosFormato" value="Hacen constar que se realizó la sustentación del trabajo de grado en la fecha y hora: *" />
                                         <p:calendar navigator="true" value="#{actaSustentacionController.fechasus}" required="true" label="Fecha" pattern="dd-MM-yyyy HH:mm:ss" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" requiredMessage="Debe ingresar la fecha de sustentacion." />
                                            
                                         <p:outputLabel styleClass="subtitulosFormato" value="De el(los) señor(res):" />               
