--- a/web/perfiles/vista-proceso.xhtml
+++ b/web/perfiles/vista-proceso.xhtml
@@ -29,7 +29,7 @@
                         <h:outputLabel  class="tituloContenido" value="Flujo de procesos de un trabajo de grado" />        
                         <p:spacer height="30"/>
                 
-                    <h:outputLabel  class="subtitulosFormato" value="Haga click en una de las imagenes para ver en tamaño completo" />        
+                    <h:outputLabel  class="subtitulosFormato" value="Haga click en una de las siguientes imagenes para verla en tamaño completo." />        
                     <p:spacer height="30"/>
                     <h:form>
 
