--- a/web/perfiles/vista-secretaria-general.xhtml
+++ b/web/perfiles/vista-secretaria-general.xhtml
@@ -30,9 +30,9 @@
                         
                         <h:panelGrid style="margin: 0 auto;">
                             <p:menubar styleClass="menubarstyleClass">
-                                <p:menuitem style="border-color: #808080" value="Ver Anteproyectos por aprobar" actionListener="#{secretariaController.anteproyectosPorAprobar()}"
+                                <p:menuitem style="border-color: #808080" value="Ver Trabajos en curso" actionListener="#{secretariaController.trabajosenCurso()}"
                                             update="tituloSecretaria :formMigaSecretaria:migaSecretaria tablaSecretaria" icon="ui-icon-folder-open"/>
-                                <p:menuitem style="border-color: #808080" value="Ver Anteproyectos ya aprobados" actionListener="#{secretariaController.anteproyectosYaAprobados()}"
+                                <p:menuitem style="border-color: #808080" value="Ver Trabajos terminados" actionListener="#{secretariaController.trabajosTerminados()}"
                                             update="tituloSecretaria :formMigaSecretaria:migaSecretaria tablaSecretaria" icon="ui-icon-folder-collapsed"/>                               
                             </p:menubar>
                         </h:panelGrid>
@@ -41,8 +41,8 @@
                         <h:outputLabel id="tituloSecretaria" class="tituloContenido" value="#{secretariaController.titulo}" />        
                         <p:spacer height="10"/>
                         
-                        <p:dataTable  styleClass="tabladirector" id="tablaSecretaria" var="car" value="#{secretariaController.anteproyectos}"
-                                      paginator="true" rows="5" paginatorPosition="bottom" rowsPerPageTemplate="8,16,24" emptyMessage="Lo sentimos, no hay anteproyectos registrados." style="font-size: 14px;">
+                        <p:dataTable  styleClass="tabladirector" id="tablaSecretaria" var="car" value="#{secretariaController.trabsSecretaria}"
+                                      paginator="true" rows="5" paginatorPosition="bottom" rowsPerPageTemplate="8,16,24" emptyMessage="Lo sentimos, no hay trabajos registrados." style="font-size: 14px;">
                             <p:column style="width: 80px;" headerText="Fecha">
                                 <h:outputText value="#{car.fecha}">
                                     <f:convertDateTime type="date" pattern="dd-MM-yyyy"/>
