--- a/web/perfiles/vista-evaluador.xhtml
+++ b/web/perfiles/vista-evaluador.xhtml
@@ -29,9 +29,9 @@
                         <p:panel styleClass="paneltrabajo" >
                             <h:panelGrid style="margin: 0 auto;">
                                 <p:menubar styleClass="menubarstyleClass">
-                                    <p:menuitem style="border-color: #808080" value="Ver Anteproyectos por evaluar" actionListener="#{evaluadorController.anteproyectosPorEvaluar()}"
+                                    <p:menuitem style="border-color: #808080" value="Ver Trabajos en curso" actionListener="#{evaluadorController.trabajosenCurso()}"
                                                 update="tituloEvaluador :formMigaEvaluador:migaEvaluador tablaEvaluador" icon="ui-icon-folder-open"/>
-                                    <p:menuitem style="border-color: #808080" value="Ver Anteproyectos evaluados" actionListener="#{evaluadorController.anteproyectosEvaluados()}"
+                                    <p:menuitem style="border-color: #808080" value="Ver Trabajos terminados" actionListener="#{evaluadorController.trabajosTerminados()}"
                                                 update="tituloEvaluador :formMigaEvaluador:migaEvaluador tablaEvaluador" icon="ui-icon-folder-collapsed"/>                               
                                 </p:menubar>
                             </h:panelGrid>
@@ -39,34 +39,30 @@
                             <h:outputLabel id="tituloEvaluador" class="tituloContenido" value="#{evaluadorController.titulo}" />        
                             <p:spacer height="10"/>
                             
-                            <p:dataTable  styleClass="tabladirector" id="tablaEvaluador" var="car" value="#{evaluadorController.anteproyectos}"
+                            <p:dataTable  styleClass="tabladirector" id="tablaEvaluador" var="car" value="#{evaluadorController.trabsEvaluador}"
                                       paginator="true" rows="5" paginatorPosition="bottom" rowsPerPageTemplate="8,16,24" emptyMessage="Lo sentimos, no hay trabajos registrados." style="font-size: 14px;">
-                            <p:column style="width: 80px;" headerText="Fecha">
-                                <h:outputText value="#{car.fecha}">
-                                    <f:convertDateTime type="date" pattern="dd-MM-yyyy"/>
-                                </h:outputText>                                 
-                            </p:column>
-                            <p:column style="width: 250px;" headerText="Trabajo de Grado">
-                                <p:commandLink value="#{car.trabajoGrado}" actionListener="#{evaluadorController.contenidoTgEvaluador}" style="color: #045491;">                                     
-                                    <f:attribute name="idtrabajo" value="#{car.trabajoGradoId}" />    
-                                    <f:attribute name="nombretrab" value="#{car.trabajoGrado}" />
-                                    <f:attribute name="iddirector" value="#{car.directorId}" />
-                                    <f:attribute name="est1" value="#{car.est1Id}" />
-                                    <f:attribute name="est2" value="#{car.est2Id}" />
-                                    <f:attribute name="fase" value="#{car.estado}" />
-                                </p:commandLink>             
-                            </p:column>
-                            <p:column rendered="#{!evaluadorController.modo}" style="width: 140px;" headerText="Director">
-                                #{car.director}    
-                            </p:column>
-                             <p:column style="width: 140px;" headerText="Estudiantes" > 
-                                #{car.est1} <br /> #{car.est2}      
-                            </p:column>
-                            <p:column rendered="#{evaluadorController.modo}" style="width: 70px; text-align: center;" headerText="Aprobado">
-                                <h:selectBooleanCheckbox id="checkbox" value="#{car.aprobado}" disabled="true" />
-                            </p:column>
-                        </p:dataTable>
-                            
+                                <p:column style="width: 80px;" headerText="Fecha">
+                                    <h:outputText value="#{car.fecha}">
+                                        <f:convertDateTime type="date" pattern="dd-MM-yyyy"/>
+                                    </h:outputText>                                 
+                                </p:column>
+                                <p:column style="width: 250px;" headerText="Trabajo de Grado">
+                                    <p:commandLink value="#{car.trabajoGrado}" actionListener="#{evaluadorController.contenidoTgEvaluador}" style="color: #045491;">                                     
+                                        <f:attribute name="idtrabajo" value="#{car.trabajoGradoId}" />    
+                                        <f:attribute name="nombretrab" value="#{car.trabajoGrado}" />
+                                        <f:attribute name="iddirector" value="#{car.directorId}" />
+                                        <f:attribute name="est1" value="#{car.est1Id}" />
+                                        <f:attribute name="est2" value="#{car.est2Id}" />
+                                        <f:attribute name="fase" value="#{car.estado}" />
+                                    </p:commandLink>             
+                                </p:column>
+                                <p:column  style="width: 140px;" headerText="Director">
+                                    #{car.director}    
+                                </p:column>
+                                <p:column style="width: 140px;" headerText="Estudiantes">
+                                    #{car.est1} <br /> #{car.est2}    
+                                </p:column>                        
+                            </p:dataTable>
                         </p:panel>
                     </h:form>                
             </ui:define>
